fix white space issue when editing long posts

--- a/sass/components/_post.scss
+++ b/sass/components/_post.scss
@@ -1290,6 +1290,7 @@
         padding: 0 8px 0 5px; // if the left margin changes, the margin of post-pre-header__icons-container needs to be adjusted accordingly
         margin: 0 auto;
         table-layout: fixed;
+        overflow: hidden;
 
         > div {
             display: table-cell;
